--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-This is the new GaospConf for GAOSP
+#############################################
+###- This is the new GaospConf for GAOSP -###
+#############################################
+
+You can help to translate GaospConf: http://www.drakaz.com/forum/viewtopic.php?id=691
